Archive2/a3/7484af08add790/output
main.cpp:29:6: warning: unused variable 'a' [-Wunused-variable]
 int a=10;
     ^
main.cpp:27:18: warning: unused parameter 'i' [-Wunused-parameter]
void pSearch(int i)
                 ^
main.cpp:48:41: error: reference to non-static member function must be called
    threads.push_back(std::thread (CAS::pSearch,i));
                                   ~~~~~^~~~~~~
main.cpp:12:6: warning: private field 'tagIndex' is not used [-Wunused-private-field]
long tagIndex,arg_tag;
     ^
3 warnings and 1 error generated.
